--- a/templates/warehousing/access/login.html
+++ b/templates/warehousing/access/login.html
@@ -22,7 +22,7 @@
 <body class="hold-transition login-page bg-white">
     <div class="login-box">
         <div class="login-logo">
-            <a href="#"><b>Admin</b> QURA Hehe :)</a>
+            <a href="#">Hospital System<br><b>Warehousing</b></a>
         </div>
         <!-- /.login-logo -->
         <div class="card shadow-none">
