--- a/templates/warehousing/admin/content/request.html
+++ b/templates/warehousing/admin/content/request.html
@@ -211,6 +211,7 @@
                                         <select class="form-control" id="e_request_status" name="e_request_status">
                                             <option value="Pending">Pending</option>
                                             <option value="For Delivery">For Delivery</option>
+                                            <option value="Delivered">Delivered</option>
                                         </select>
                                     </div>
                                 </div>
