--- a/templates/warehousing/manager/content/employees.html
+++ b/templates/warehousing/manager/content/employees.html
@@ -1,5 +1,5 @@
 <!-- Apply layout from base.html -->
-{%extends 'warehousing/admin/default/base.html'%} 
+{%extends 'warehousing/manager/default/base.html'%} 
 
 <!-- Enter content for block 'content' -->
 {%block content%}
@@ -27,7 +27,7 @@
             <div class="row">     
                 <!-- Button -->
                 <div class="col-sm-6">
-                    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Employee</a>
+                    <!-- <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Employee</a> -->
                     <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
                 </div>
                 <!-- / Button -->
@@ -74,9 +74,9 @@
                                     <tr>
                                         <th width="10%">User ID</th>
                                         <th width="5%">User Type</th>
-                                        <th width="10%">Full Name</th>
-                                        <!-- <th width="10%">Middle Name</th>
-                                        <th width="10%">Last Name</th> -->
+                                        <th width="10%">First Name</th>
+                                        <th width="10%">Middle Name</th>
+                                        <th width="10%">Last Name</th>
                                         <th width="5%">Age</th>
                                         <th width="10%">Contact</th>
                                         <th width="10%">Address</th>
