--- a/templates/warehousing/manager/content/inbound_reports.html
+++ b/templates/warehousing/manager/content/inbound_reports.html
@@ -1,5 +1,5 @@
 <!-- Apply layout from base.html -->
-{%extends 'warehousing/admin/default/base.html'%} 
+{%extends 'warehousing/manager/default/base.html'%} 
 
 <!-- Enter content for block 'content' -->
 {%block content%}
@@ -9,7 +9,7 @@
             <div class="row mb-2">
                 <!-- Title -->
                 <div class="col-sm-6">
-                    <h1>Inventory Locations</h1>
+                    <h1>Inbound Reports</h1>
                 </div>
 
                 <!-- Breadcrumb -->
@@ -18,17 +18,16 @@
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
                         <script>if(window.location.pathname == '/warehousing/admin/dashboard/'){document.getElementById("dashboard_nav").classList.add('active')}</script>
-                        <li class="breadcrumb-item" id ="inventory_locations_nav">Inventory Locations</li>
-                        <script>if(window.location.pathname == '/warehousing/admin/inventory_locations/'){document.getElementById("inventory_locations_nav").classList.add('active')}</script>
+                        <li class="breadcrumb-item" id ="inbound_reports_nav">Inbound Reports</li>
+                        <script>if(window.location.pathname == '/warehousing/admin/inbound_reports/'){document.getElementById("inbound_reports_nav").classList.add('active')}</script>
                     </ol>
                 </div>
                 <!-- / breadcrumb -->
             </div>
-            <br>
             <div class="row">     
                 <!-- Button -->
                 <div class="col-sm-6">
-                    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Inventory Location</a>
+                    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Inbound Reports</a>
                     <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
                 </div>
                 <!-- / Button -->
@@ -64,7 +63,7 @@
                     <div class="card card-primary card-outline">
                         <!-- Card Header -->
                         <div class="card-header">
-                            <h3 class="card-title">Inventory Location</h3>
+                            <h3 class="card-title">Inbound Reports</h3>
                         </div>
                         <!-- /.card-header -->
 
@@ -73,8 +72,12 @@
                             <table id="data-table" class="table table-bordered table-hover">
                                 <thead>
                                     <tr>
-                                        <th>Location Name</th>
-                                        <th>Supply Category Name</th>
+                                        <th>Inbound Reports ID</th>
+                                        <th>Request ID</th>
+                                        <th>Employee Name</th>
+                                        <th>Status</th>
+                                        <th>Total Quantity</th>
+                                        <th>Date Created</th>
                                         <th class="text-center">Actions</th>
                                     </tr>
                                 </thead>
@@ -93,14 +96,12 @@
     </section>
     <!-- /.content -->
 
-    <!-- Adding Inventory Location Modal -->
+    <!-- Adding Inbound Report Modal -->
     <div class="modal fade" id="adding_modal">
         <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">
-                        <i class= "fas fa-file-alt"></i>
-                        Inventory Location Form</h4>
+                    <h4 class="modal-title">Inbound Report Form</h4>
                     <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"><i class="fas fa-times"></i></span>
                     </button>
@@ -113,22 +114,39 @@
                                 <input type="hidden" name="uuid" id="uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="inventory_location_name" id="inventory_location_nameLabel">Inventory Location Name</label>
-                                        <input type="input" class="form-control" id="inventory_location_name" placeholder="Inventory Location Name" required>
+                                        <label for="request_id">Request</label>
+                                        <select class="form-control" id="request_id" name="request_id" required>
+                                        </select>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="supply_category_id" id="supply_category_idLabel">Category</label>
-                                        <select class="form-control" id="supply_category_id" name="supply_category_id">
+                                        <label for="employee_id">Employee</label>
+                                        <select class="form-control" id="employee_id" name="employee_id" required>
                                         </select>
-                                        
                                     </div>
                                 </div>
                             </div>
-                          
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="status">Status</label>
+                                        <select class="form-control" id="status" name="status" required>
+                                            <option value="On Going">On Going</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="total_quantity" id="total_quantityLabel">Total Quantity</label>
+                                        <input type="number" class="form-control" id="total_quantity" placeholder="Enter Total Quantity" required>
+                                    </div>
+                                </div>
+                            </div>
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -141,16 +159,14 @@
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
     </div>
-    <!-- END Adding Inventory Location Modal -->
+    <!-- END Adding Inbound Report Modal -->
 
-    <!-- editing Inventory Location Modal -->
+    <!-- editing Inbound Report Modal -->
     <div class="modal fade" id="editing_modal">
         <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">
-                        <i class= "fas fa-file-alt"></i>
-                        Edit Inventory Location</h4>
+                    <h4 class="modal-title">Inbound Report Form</h4>
                     <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"><i class="fas fa-times"></i></span>
                     </button>
@@ -161,24 +177,34 @@
                         <div class="card-body">
                             <div class="row">
                                 <input type="hidden" name="e_uuid" id="e_uuid" value="" />
+                            </div>
+                            <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_inventory_location_name" id="e_inventory_location_nameLabel">Inventory Location Name</label>
-                                        <input type="input" class="form-control" id="e_inventory_location_name" placeholder="Inventory Location Name" required>
+                                        <label for="e_employee_id">Employee</label>
+                                        <select class="form-control" id="e_employee_id" name="e_employee_id" required>
+                                        </select>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_supply_category_id" id="e_supply_category_idLabel">Category</label>
-                                        <select class="form-control" id="e_supply_category_id" name="e_supply_category_id">
+                                        <label for="e_status">Status</label>
+                                        <select class="form-control" id="e_status" name="e_status" required>
+                                            <option value="On Going">On Going</option>
                                         </select>
-                                        
                                     </div>
                                 </div>
                             </div>
-                          
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_total_quantity" id="e_total_quantityLabel">Total Quantity</label>
+                                        <input type="number" class="form-control" id="e_total_quantity" placeholder="Enter Total Quantity" required>
+                                    </div>
+                                </div>
+                            </div>
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -191,11 +217,11 @@
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
     </div>
-    <!-- END editing Inventory Location Modal -->
+    <!-- END editing Inbound Report Modal -->
 {%endblock%}
 
 {%block scripts%}
-    <script src="{{url_for('static', path='/dist/js/warehousing/admin/inventory_locations.js')}}"></script>
+<script src="{{url_for('static', path='/dist/js/warehousing/admin/inbound_reports.js')}}"></script>
 {%endblock%}
 
 
