--- a/templates/warehousing/manager/content/inventory_locations.html
+++ b/templates/warehousing/manager/content/inventory_locations.html
@@ -1,5 +1,5 @@
 <!-- Apply layout from base.html -->
-{%extends 'warehousing/admin/default/base.html'%} 
+{%extends 'warehousing/manager/default/base.html'%} 
 
 <!-- Enter content for block 'content' -->
 {%block content%}
@@ -164,7 +164,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="e_inventory_location_name" id="e_inventory_location_nameLabel">Inventory Location Name</label>
-                                        <input type="input" class="form-control" id="e_inventory_location_name" placeholder="Inventory Location Name" required>
+                                        <input type="input" class="form-control" id="e_inventory_location_name" placeholder="Category" required>
                                     </div>
                                 </div>
                             </div>
