--- a/templates/warehousing/staff/content/dashboard.html
+++ b/templates/warehousing/staff/content/dashboard.html
@@ -1,5 +1,5 @@
 <!-- Apply layout from base.html -->
-{%extends 'warehousing/admin/default/base.html'%} 
+{%extends 'warehousing/staff/default/base.html'%} 
 
 
 <!-- Enter content for block 'content' -->
@@ -11,7 +11,7 @@
                 <!-- Title -->
                 <div class="col-sm-6">
                     <h1>Dashboard</h1> 
-                    <div class="small text-secondary">This is the ADMIN</div>
+                    <div class="small text-secondary">This is the STAFF</div>
                 </div>
     
                 <!-- Breadcrumb -->
