--- a/templates/warehousing/admin/default/base.html
+++ b/templates/warehousing/admin/default/base.html
@@ -1,6 +1,5 @@
 <script>
     var TOKEN = sessionStorage.getItem('TOKEN')
-    // var LocalTOKEN = localStorage.getItem('TOKEN')
     
     if(TOKEN == null || TOKEN == "")
     {
@@ -73,9 +72,9 @@
 <div class="wrapper">
 
   <!-- Preloader -->
-    <!-- <div class="preloader flex-column justify-content-center align-items-center">
-        <img class="animation__shake" src="{{url_for('static', path='/dist/img/AdminLTELogo.png')}}" alt="AdminLTELogo" height="60" width="60">
-    </div> -->
+    <div class="preloader flex-column justify-content-center align-items-center">
+        <div class="spinner-border text-primary" role="status" style="width: 2.5rem; height: 2.5rem;"></div>
+    </div>
   
   <!-- Top Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
@@ -117,16 +116,16 @@
                 </div>
             </li>
 
-            <!-- Messages Dropdown Menu -->
+            <!-- Messages Dropdown Menu
             <li class="nav-item dropdown">
                 <a class="nav-link" data-toggle="dropdown" href="#">
                     <i class="far fa-comments"></i>
                     <span class="badge badge-danger navbar-badge">3</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                    <a href="#" class="dropdown-item">
+                    <a href="#" class="dropdown-item"> -->
                         <!-- Message Start -->
-                        <div class="media">
+                        <!-- <div class="media">
                             <img src="{{url_for('static', path='/dist/img/user1-128x128.jpg')}}" alt="User Avatar" class="img-size-50 mr-3 img-circle">
                             <div class="media-body">
                                 <h3 class="dropdown-item-title">
@@ -136,13 +135,13 @@
                                 <p class="text-sm">Call me whenever you can...</p>
                                 <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- Message End -->
-                    </a>
+                    <!-- </a>
                     <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
+                    <a href="#" class="dropdown-item"> -->
                         <!-- Message Start -->
-                        <div class="media">
+                        <!-- <div class="media">
                             <img src="{{url_for('static', path='/dist/img/user8-128x128.jpg')}}" alt="User Avatar" class="img-size-50 img-circle mr-3">
                             <div class="media-body">
                                 <h3 class="dropdown-item-title">
@@ -152,13 +151,13 @@
                                 <p class="text-sm">I got your message bro</p>
                                 <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- Message End -->
-                    </a>
+                    <!-- </a>
                     <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
+                    <a href="#" class="dropdown-item"> -->
                         <!-- Message Start -->
-                        <div class="media">
+                        <!-- <div class="media">
                             <img src="{{url_for('static', path='/dist/img/user3-128x128.jpg')}}" alt="User Avatar" class="img-size-50 img-circle mr-3">
                             <div class="media-body">
                                 <h3 class="dropdown-item-title">
@@ -168,41 +167,56 @@
                                 <p class="text-sm">The subject goes here</p>
                                 <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- Message End -->
-                    </a>
+                    <!-- </a>
                     <div class="dropdown-divider"></div>
                     <a href="#" class="dropdown-item dropdown-footer">See All Messages</a>
                 </div>
-            </li>
+            </li> -->
 
             <!-- Notifications Dropdown Menu -->
             <li class="nav-item dropdown">
                 <a class="nav-link" data-toggle="dropdown" href="#">
                     <i class="far fa-bell"></i>
-                    <span class="badge badge-warning navbar-badge">15</span>
+                    <span class="badge badge-warning navbar-badge" id="notif_number"></span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                    <span class="dropdown-item dropdown-header">15 Notifications</span>
+                    <span class="dropdown-item dropdown-header" id="how_many_notif">0 Supply Notification</span>
+                    <div id="notifications">
+                        
+                    </div>
                     <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
-                        <i class="fas fa-envelope mr-2"></i> 4 new messages
-                        <span class="float-right text-muted text-sm">3 mins</span>
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
-                        <i class="fas fa-users mr-2"></i> 8 friend requests
-                        <span class="float-right text-muted text-sm">12 hours</span>
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
-                        <i class="fas fa-file mr-2"></i> 3 new reports
-                        <span class="float-right text-muted text-sm">2 days</span>
-                    </a>    
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
+                    <div id="see_all_notif">
+
+                    </div>
                 </div>
             </li>
+
+            <!-- User Account Dropdown Menu -->
+            <li class="nav-item dropdown">
+                <a class="nav-link" data-toggle="dropdown" href="#">
+                    <b>Account</b>
+                    <!-- <span class="badge badge-warning navbar-badge">15</span> -->
+                </a>
+                <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+                    <span class="dropdown-item dropdown-header"></span>
+                    <div class="dropdown-divider"></div>
+                    <a href="#" class="dropdown-item">
+                        <i class="fas fa-user-circle mr-2"></i> Profile
+                    </a>
+                    <a href="#" class="dropdown-item">
+                        <i class="fas fa-cogs mr-2"></i> Settings
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <a href="#" class="dropdown-item" onClick="return logout()">
+                        <i class="fas fa-sign-out-alt mr-2"></i> Logout
+                    </a>
+                    <!-- <div class="dropdown-divider"></div>
+                    <a href="#" class="dropdown-item dropdown-footer">Logout</a> -->
+                </div>
+            </li>
+
         </ul>
         <!-- /.navbar-nav -->
     </nav>
@@ -252,7 +266,7 @@
                     <li class="nav-header"><b>Dashboard</b></li>
                     <li class="nav-item">
                         <a href="/warehousing/admin/dashboard" class="nav-link" id="dashboard_sidebar">
-                            <script>if(window.location.pathname == '/warehousing/admin/dashboard'){document.getElementById("dashboard_sidebar").classList.add('active')}</script>
+                            <script>if(window.location.pathname == '/warehousing/admin/dashboard' || window.location.pathname == '/warehousing/admin/'){document.getElementById("dashboard_sidebar").classList.add('active')}</script>
                             <i class="nav-icon fas fa-chart-line"></i>
                         <p>Dashboard</p>
                         </a>
@@ -370,8 +384,8 @@
 
         <!-- Sidebar Custom -->
         <div class="sidebar-custom">
-            <a href="#" class="btn btn-link"><i class="fas fa-cogs"></i></a>
-            <button class="btn btn-danger hide-on-collapse pos-right" onClick="return logout()">Logout</button>
+            <!-- <a href="#" class="btn btn-link"><i class="fas fa-cogs"></i></a>
+            <button class="btn btn-danger hide-on-collapse pos-right" onClick="return logout()">Logout</button> -->
         </div>
         <!-- /.sidebar-custom -->
     </aside>
@@ -388,6 +402,37 @@
         <!-- BLOCK FOR MAIN CONTENT -->
         {%block content%}{%endblock%}
     </div>
+
+    <!-- Logout Modal -->
+    <div class="modal fade" id="logout_modal">
+        <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">
+                        <i class= "fas fa-sign-out-alt"></i>
+                        Log out</h4>
+                    <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body" id="modal_viewing">
+                    <!-- CONTENT -->
+                    <form id="e_form_id" name="e_form_id" enctype="multipart/form_data">
+                        <div class="card-body">
+                            Are you sure you want to Logout?
+                            <!-- BUTTONS -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                <button type="Submit" class="btn btn-danger" id="button_logout" onClick="return logout()">Logout<i class= "fas fa-sign-out-alt"></i></button>
+                            </div>
+                            <!-- END BUTTONS -->
+                        </div>
+                    </form> <!-- END CONTENT -->
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    </div>
+    <!-- END Logout Modal -->
 
 <!-- END BODYYYYYY/CONTENTTTTTT -->
 <!-- ============================================================================== -->
@@ -433,6 +478,8 @@
 <script src="{{url_for('static', path='/plugins/moment/moment.min.js')}}"></script>
 <script src="{{url_for('static', path='/plugins/sweetalert2/sweetalert2.min.js')}}"></script>
 <script src="{{url_for('static', path='/dist/js/warehousing/access/logout.js')}}"></script>
+
+<!-- <script src="{{url_for('static', path='/dist/js/warehousing/admin/baseAdmin.js')}}"></script> -->
 
 
 
