--- a/templates/warehousing/manager/content/suppliers.html
+++ b/templates/warehousing/manager/content/suppliers.html
@@ -1,5 +1,7 @@
 <!-- Apply layout from base.html -->
-{%extends 'warehousing/admin/default/base.html'%} 
+{%extends 'warehousing/manager/default/base.html'%} 
+
+
 
 <!-- Enter content for block 'content' -->
 {%block content%}
@@ -9,7 +11,7 @@
             <div class="row mb-2">
                 <!-- Title -->
                 <div class="col-sm-6">
-                    <h1>Inventory Locations</h1>
+                    <h1>Suppliers</h1>
                 </div>
 
                 <!-- Breadcrumb -->
@@ -18,17 +20,16 @@
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
                         <script>if(window.location.pathname == '/warehousing/admin/dashboard/'){document.getElementById("dashboard_nav").classList.add('active')}</script>
-                        <li class="breadcrumb-item" id ="inventory_locations_nav">Inventory Locations</li>
-                        <script>if(window.location.pathname == '/warehousing/admin/inventory_locations/'){document.getElementById("inventory_locations_nav").classList.add('active')}</script>
+                        <li class="breadcrumb-item" id ="suppliers_nav">Suppliers</li>
+                        <script>if(window.location.pathname == '/warehousing/admin/suppliers/'){document.getElementById("suppliers_nav").classList.add('active')}</script>
                     </ol>
                 </div>
                 <!-- / breadcrumb -->
             </div>
-            <br>
             <div class="row">     
                 <!-- Button -->
                 <div class="col-sm-6">
-                    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Inventory Location</a>
+                    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Suppliers</a>
                     <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
                 </div>
                 <!-- / Button -->
@@ -64,7 +65,7 @@
                     <div class="card card-primary card-outline">
                         <!-- Card Header -->
                         <div class="card-header">
-                            <h3 class="card-title">Inventory Location</h3>
+                            <h3 class="card-title">Suppliers</h3>
                         </div>
                         <!-- /.card-header -->
 
@@ -73,8 +74,10 @@
                             <table id="data-table" class="table table-bordered table-hover">
                                 <thead>
                                     <tr>
-                                        <th>Location Name</th>
-                                        <th>Supply Category Name</th>
+                                        <th>Supplier Name</th>
+                                        <th>Contact</th>
+                                        <th>Email</th>
+                                        <th>Description</th>
                                         <th class="text-center">Actions</th>
                                     </tr>
                                 </thead>
@@ -93,14 +96,14 @@
     </section>
     <!-- /.content -->
 
-    <!-- Adding Inventory Location Modal -->
+    <!-- Adding Supplier Modal -->
     <div class="modal fade" id="adding_modal">
         <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">
                         <i class= "fas fa-file-alt"></i>
-                        Inventory Location Form</h4>
+                        Supplier Form</h4>
                     <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"><i class="fas fa-times"></i></span>
                     </button>
@@ -113,22 +116,35 @@
                                 <input type="hidden" name="uuid" id="uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="inventory_location_name" id="inventory_location_nameLabel">Inventory Location Name</label>
-                                        <input type="input" class="form-control" id="inventory_location_name" placeholder="Inventory Location Name" required>
+                                        <label for="supplier_name" id="supplier_nameLabel">Supplier Name</label>
+                                        <input type="input" class="form-control" id="supplier_name" placeholder="Enter Supplier Name" required>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="supply_category_id" id="supply_category_idLabel">Category</label>
-                                        <select class="form-control" id="supply_category_id" name="supply_category_id">
-                                        </select>
-                                        
+                                        <label for="supplier_contact" id="supplier_contactLabel">Supplier Contact</label>
+                                        <input type="number" class="form-control" id="supplier_contact" placeholder="Enter Supplier Contact" required>
                                     </div>
                                 </div>
                             </div>
-                          
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="supplier_email" id="supplier_emailLabel">Supplier Email</label>
+                                        <input type="email" class="form-control" id="supplier_email" placeholder="Enter Supplier Email" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="supplier_description" id="supplier_descriptionLabel">Supplier Descrription</label>
+                                        <textarea class="form-control" id="supplier_description" placeholder="Enter Supplier Description"></textarea>
+                                    </div>
+                                </div>
+                            </div>
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -141,21 +157,21 @@
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
     </div>
-    <!-- END Adding Inventory Location Modal -->
-
-    <!-- editing Inventory Location Modal -->
+    <!-- END Adding Supplier Modal -->
+    
+    <!-- Editing Supplier Modal -->
     <div class="modal fade" id="editing_modal">
         <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">
                         <i class= "fas fa-file-alt"></i>
-                        Edit Inventory Location</h4>
+                        Edit Supplier</h4>
                     <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"><i class="fas fa-times"></i></span>
                     </button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" id="modal_viewing">
                     <!-- CONTENT -->
                     <form id="e_form_id" name="e_form_id" enctype="multipart/form_data">
                         <div class="card-body">
@@ -163,22 +179,35 @@
                                 <input type="hidden" name="e_uuid" id="e_uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_inventory_location_name" id="e_inventory_location_nameLabel">Inventory Location Name</label>
-                                        <input type="input" class="form-control" id="e_inventory_location_name" placeholder="Inventory Location Name" required>
+                                        <label for="e_supplier_name" id="e_supplier_nameLabel">Supplier Name</label>
+                                        <input type="input" class="form-control" id="e_supplier_name" placeholder="Enter Supplier Name" required>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_supply_category_id" id="e_supply_category_idLabel">Category</label>
-                                        <select class="form-control" id="e_supply_category_id" name="e_supply_category_id">
-                                        </select>
-                                        
+                                        <label for="e_supplier_contact" id="e_supplier_contactLabel">Supplier Contact</label>
+                                        <input type="number" class="form-control" id="e_supplier_contact" placeholder="Enter Supplier Contact" required>
                                     </div>
                                 </div>
                             </div>
-                          
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_supplier_email" id="e_supplier_emailLabel">Supplier Email</label>
+                                        <input type="email" class="form-control" id="e_supplier_email" placeholder="Enter Supplier Email" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_supplier_description" id="e_supplier_descriptionLabel">Supplier Descrription</label>
+                                        <textarea class="form-control" id="e_supplier_description" placeholder="Enter Supplier Description"></textarea>
+                                    </div>
+                                </div>
+                            </div>
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -191,11 +220,11 @@
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
     </div>
-    <!-- END editing Inventory Location Modal -->
+    <!-- END Editing Supplier Modal -->
 {%endblock%}
 
 {%block scripts%}
-    <script src="{{url_for('static', path='/dist/js/warehousing/admin/inventory_locations.js')}}"></script>
+    <script src="{{url_for('static', path='/dist/js/warehousing/admin/suppliers.js')}}"></script>
 {%endblock%}
 
 
