--- a/templates/warehousing/manager/content/supply_categories.html
+++ b/templates/warehousing/manager/content/supply_categories.html
@@ -1,5 +1,5 @@
 <!-- Apply layout from base.html -->
-{%extends 'warehousing/admin/default/base.html'%} 
+{%extends 'warehousing/manager/default/base.html'%} 
 
 <!-- Enter content for block 'content' -->
 {%block content%}
@@ -9,7 +9,7 @@
             <div class="row mb-2">
                 <!-- Title -->
                 <div class="col-sm-6">
-                    <h1>Inventory Locations</h1>
+                    <h1>Supply Categories</h1>
                 </div>
 
                 <!-- Breadcrumb -->
@@ -18,8 +18,8 @@
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
                         <script>if(window.location.pathname == '/warehousing/admin/dashboard/'){document.getElementById("dashboard_nav").classList.add('active')}</script>
-                        <li class="breadcrumb-item" id ="inventory_locations_nav">Inventory Locations</li>
-                        <script>if(window.location.pathname == '/warehousing/admin/inventory_locations/'){document.getElementById("inventory_locations_nav").classList.add('active')}</script>
+                        <li class="breadcrumb-item" id ="supply_categories_nav">Supply Categories</li>
+                        <script>if(window.location.pathname == '/warehousing/admin/supply_categories/'){document.getElementById("supply_categories_nav").classList.add('active')}</script>
                     </ol>
                 </div>
                 <!-- / breadcrumb -->
@@ -28,7 +28,7 @@
             <div class="row">     
                 <!-- Button -->
                 <div class="col-sm-6">
-                    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Inventory Location</a>
+                    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Supply Category</a>
                     <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
                 </div>
                 <!-- / Button -->
@@ -64,43 +64,39 @@
                     <div class="card card-primary card-outline">
                         <!-- Card Header -->
                         <div class="card-header">
-                            <h3 class="card-title">Inventory Location</h3>
+                            <h3 class="card-title">Supply Category</h3>
                         </div>
                         <!-- /.card-header -->
 
                         <!-- Card Body -->
                         <div class="card-body">
-                            <table id="data-table" class="table table-bordered table-hover">
+                            <table id="data-table" class="table table-bordered table-hover" cellspacing="0" style="width:100%;">
                                 <thead>
                                     <tr>
-                                        <th>Location Name</th>
-                                        <th>Supply Category Name</th>
-                                        <th class="text-center">Actions</th>
+                                        <th width="25%">Supply Category Name</th>
+                                        <th width="25%">Suppy Category Description</th>
+                                        <th width="25%">Date Created</th>
+                                        <th width="25%" class="text-center">Actions</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                 </tbody>
                             </table>
-                        </div>
-                        <!-- /.card-body -->
-                    </div>
-                    <!-- /.card -->
+                        </div><!-- /.card-body -->
+                    </div><!-- /.card -->
                 </div>
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container-fluid -->
-    </section>
-    <!-- /.content -->
+            </div><!-- /.row -->
+        </div><!-- /.container-fluid -->
+    </section><!-- /.content -->
 
-    <!-- Adding Inventory Location Modal -->
-    <div class="modal fade" id="adding_modal">
+     <!-- Adding supply category Modal -->
+     <div class="modal fade" id="adding_modal">
         <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">
                         <i class= "fas fa-file-alt"></i>
-                        Inventory Location Form</h4>
+                        Supply Category Form</h4>
                     <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"><i class="fas fa-times"></i></span>
                     </button>
@@ -113,22 +109,19 @@
                                 <input type="hidden" name="uuid" id="uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="inventory_location_name" id="inventory_location_nameLabel">Inventory Location Name</label>
-                                        <input type="input" class="form-control" id="inventory_location_name" placeholder="Inventory Location Name" required>
+                                        <label for="supply_category_name" id="supply_category_nameLabel">Supply Category Name</label>
+                                        <input type="input" class="form-control" id="supply_category_name" placeholder="Enter Supply Category Name" required>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="supply_category_id" id="supply_category_idLabel">Category</label>
-                                        <select class="form-control" id="supply_category_id" name="supply_category_id">
-                                        </select>
-                                        
+                                        <label for="supply_category_description" id="supply_category_descriptionLabel">Supply Category Descrription</label>
+                                        <textarea class="form-control" id="supply_category_description" placeholder="Enter Supply Category Description"></textarea>
                                     </div>
                                 </div>
                             </div>
-                          
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -141,21 +134,21 @@
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
     </div>
-    <!-- END Adding Inventory Location Modal -->
+    <!-- END Adding supply category Modal -->
 
-    <!-- editing Inventory Location Modal -->
+    <!-- Editing supply category Modal -->
     <div class="modal fade" id="editing_modal">
         <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">
                         <i class= "fas fa-file-alt"></i>
-                        Edit Inventory Location</h4>
+                        Edit Supply Category</h4>
                     <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"><i class="fas fa-times"></i></span>
                     </button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" id="modal_viewing">
                     <!-- CONTENT -->
                     <form id="e_form_id" name="e_form_id" enctype="multipart/form_data">
                         <div class="card-body">
@@ -163,22 +156,19 @@
                                 <input type="hidden" name="e_uuid" id="e_uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_inventory_location_name" id="e_inventory_location_nameLabel">Inventory Location Name</label>
-                                        <input type="input" class="form-control" id="e_inventory_location_name" placeholder="Inventory Location Name" required>
+                                        <label for="e_supply_category_name" id="e_supply_category_nameLabel">Supply Category Name</label>
+                                        <input type="input" class="form-control" id="e_supply_category_name" placeholder="Enter Supply Category Name" required>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_supply_category_id" id="e_supply_category_idLabel">Category</label>
-                                        <select class="form-control" id="e_supply_category_id" name="e_supply_category_id">
-                                        </select>
-                                        
+                                        <label for="e_supply_category_description" id="e_supply_category_descriptionLabel">Supply Category Descrription</label>
+                                        <textarea class="form-control" id="e_supply_category_description" placeholder="Enter Supply Category Description"></textarea>
                                     </div>
                                 </div>
                             </div>
-                          
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -191,11 +181,9 @@
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
     </div>
-    <!-- END editing Inventory Location Modal -->
+    <!-- END Viewing supply category Modal -->
 {%endblock%}
 
 {%block scripts%}
-    <script src="{{url_for('static', path='/dist/js/warehousing/admin/inventory_locations.js')}}"></script>
+<script src="{{url_for('static', path='/dist/js/warehousing/admin/supply_categories.js')}}"></script>
 {%endblock%}
-
-
