--- a/templates/warehousing/staff/content/inventories.html
+++ b/templates/warehousing/staff/content/inventories.html
@@ -1,5 +1,5 @@
 <!-- Apply layout from base.html -->
-{%extends 'warehousing/admin/default/base.html'%} 
+{%extends 'warehousing/staff/default/base.html'%} 
 
 <!-- Enter content for block 'content' -->
 {%block content%}
@@ -9,17 +9,17 @@
             <div class="row mb-2">
                 <!-- Title -->
                 <div class="col-sm-6">
-                    <h1>Inventory Locations</h1>
+                    <h1>Inventories</h1>
                 </div>
 
                 <!-- Breadcrumb -->
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
+                        <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/staff/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
-                        <script>if(window.location.pathname == '/warehousing/admin/dashboard/'){document.getElementById("dashboard_nav").classList.add('active')}</script>
-                        <li class="breadcrumb-item" id ="inventory_locations_nav">Inventory Locations</li>
-                        <script>if(window.location.pathname == '/warehousing/admin/inventory_locations/'){document.getElementById("inventory_locations_nav").classList.add('active')}</script>
+                        <script>if(window.location.pathname == '/warehousing/staff/dashboard/'){document.getElementById("dashboard_nav").classList.add('active')}</script>
+                        <li class="breadcrumb-item" id ="inventories_nav">Inventories</li>
+                        <script>if(window.location.pathname == '/warehousing/staff/inventories/'){document.getElementById("inventories_nav").classList.add('active')}</script>
                     </ol>
                 </div>
                 <!-- / breadcrumb -->
@@ -28,7 +28,7 @@
             <div class="row">     
                 <!-- Button -->
                 <div class="col-sm-6">
-                    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Inventory Location</a>
+                    <!-- <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Inventory</a> -->
                     <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
                 </div>
                 <!-- / Button -->
@@ -64,7 +64,7 @@
                     <div class="card card-primary card-outline">
                         <!-- Card Header -->
                         <div class="card-header">
-                            <h3 class="card-title">Inventory Location</h3>
+                            <h3 class="card-title">Inventories</h3>
                         </div>
                         <!-- /.card-header -->
 
@@ -73,9 +73,10 @@
                             <table id="data-table" class="table table-bordered table-hover">
                                 <thead>
                                     <tr>
-                                        <th>Location Name</th>
-                                        <th>Supply Category Name</th>
-                                        <th class="text-center">Actions</th>
+                                        <th width="25%">Inventory ID</th>
+                                        <th width="25%">Inventory Location Name</th>
+                                        <th width="25%">Supply Name</th>
+                                        <th width="25%" class="text-center">Actions</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -93,14 +94,14 @@
     </section>
     <!-- /.content -->
 
-    <!-- Adding Inventory Location Modal -->
+    <!-- Adding Inventory Modal -->
     <div class="modal fade" id="adding_modal">
         <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">
                         <i class= "fas fa-file-alt"></i>
-                        Inventory Location Form</h4>
+                        Inventory Form</h4>
                     <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"><i class="fas fa-times"></i></span>
                     </button>
@@ -113,18 +114,19 @@
                                 <input type="hidden" name="uuid" id="uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="inventory_location_name" id="inventory_location_nameLabel">Inventory Location Name</label>
-                                        <input type="input" class="form-control" id="inventory_location_name" placeholder="Inventory Location Name" required>
+                                        <label for="inventory_location_id" id="inventory_location_idLabel">Location</label>
+                                        <select class="form-control" id="inventory_location_id" name="inventory_location_id">
+                                        </select>
+                                        
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="supply_category_id" id="supply_category_idLabel">Category</label>
-                                        <select class="form-control" id="supply_category_id" name="supply_category_id">
+                                        <label for="supply_id" id="supply_idLabel">Supply</label>
+                                        <select class="form-control" id="supply_id" name="supply_id">
                                         </select>
-                                        
                                     </div>
                                 </div>
                             </div>
@@ -132,7 +134,7 @@
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                <button type="Submit" class="btn btn-primary" id="button_add">Add</button>
+                                <button type="submit" class="btn btn-primary" id="button_add">Add</button>
                             </div>
                             <!-- END BUTTONS -->
                         </div>
@@ -141,16 +143,16 @@
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
     </div>
-    <!-- END Adding Inventory Location Modal -->
+    <!-- END Adding Inventory Modal -->
 
-    <!-- editing Inventory Location Modal -->
+    <!-- editing Inventory Modal -->
     <div class="modal fade" id="editing_modal">
         <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">
                         <i class= "fas fa-file-alt"></i>
-                        Edit Inventory Location</h4>
+                        Edit Inventory</h4>
                     <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"><i class="fas fa-times"></i></span>
                     </button>
@@ -163,18 +165,21 @@
                                 <input type="hidden" name="e_uuid" id="e_uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_inventory_location_name" id="e_inventory_location_nameLabel">Inventory Location Name</label>
-                                        <input type="input" class="form-control" id="e_inventory_location_name" placeholder="Inventory Location Name" required>
+                                        <label for="e_inventory_location_id" id="e_inventory_location_idLabel">Location</label>
+                                        <select class="form-control" id="e_inventory_location_id" name="e_inventory_location_id">
+
+                                        </select>
+                                        
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_supply_category_id" id="e_supply_category_idLabel">Category</label>
-                                        <select class="form-control" id="e_supply_category_id" name="e_supply_category_id">
+                                        <label for="e_supply_id" id="e_supply_idLabel">Supply</label>
+                                        <select class="form-control" id="e_supply_id" name="e_supply_id">
+                                            
                                         </select>
-                                        
                                     </div>
                                 </div>
                             </div>
@@ -182,7 +187,7 @@
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                <button type="Submit" class="btn btn-primary" id="button_save">Save</button>
+                                <button type="submit" class="btn btn-primary" id="button_save">Save</button>
                             </div>
                             <!-- END BUTTONS -->
                         </div>
@@ -191,11 +196,11 @@
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
     </div>
-    <!-- END editing Inventory Location Modal -->
+    <!-- END editing Inventory Modal -->
 {%endblock%}
 
 {%block scripts%}
-    <script src="{{url_for('static', path='/dist/js/warehousing/admin/inventory_locations.js')}}"></script>
+    <script src="{{url_for('static', path='/dist/js/warehousing/admin/inventories.js')}}"></script>
 {%endblock%}
 
 
